# ppt-cli

./: .gitignore  CLAUDE.md  DESIGN-GUIDELINES.md  IMAGE-PROMPTING-TIPS.md  LICENSE  Makefile  README.md  ppt-cli.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: 3rd-level-design-directions.md  image-gen-eval.md  prompt-for-skill-review.md  skill-file-guide.md
image-gen-tests/: init-run.sh  prompts-reference.json  results-template.html
ppt_cli/: __main__.py  cli.py  cmd_content.py  cmd_create.py  cmd_guidelines.py  cmd_image_gen.py  cmd_inspect.py  cmd_internals.py  cmd_structure.py  cmd_style.py  cmd_template.py  cmd_text.py  helpers.py  image_gen.py  ooxml.py  serialisation.py  setup.py  staging.py  template_registry.py
ppt_cli/skill/: 2-behavior.md  2-design-guidelines.md  2-image-generation.md  2-usage-examples.md  2-user-experience.md  3-design-business.md  3-design-business.yaml  3-design-creative.md  3-design-creative.yaml  3-design-educational.md  3-design-educational.yaml  3-design-technical.md  3-design-technical.yaml  3-design-template.yaml  3-design-universal.md  SKILL.md  build-template.sh  design-system.yaml  image-gen.md  protocol.md  speaker-notes.md
ppt_cli/skill/design-palettes-demo/: palette-preview-business.html  palette-preview-creative.html  palette-preview-educational.html  palette-preview-technical.html
tests/: conftest.py  test_content.py  test_create.py  test_guidelines.py  test_image_gen.py  test_inspect.py  test_internals_mutate.py  test_internals_stage.py  test_setup.py  test_structure.py  test_style.py  test_template.py  test_text.py
